--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  position: relative;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -6,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: cursive;
 
   background: linear-gradient(to right, #434343 0%, black 100%);
 }
