--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,12 +1,11 @@
 .NavBar {
   width: 100%;
   font-size: 30px;
+  background: (255, 255, 255, 0.5);
   background-color: white;
-  color: black;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   position: sticky;
   top: 0px;
-  opacity: 50%;
   text-align: center;
 }
