--- a/src/components/personInfo/PersonInfo.css
+++ b/src/components/personInfo/PersonInfo.css
@@ -2,10 +2,11 @@
   padding-top: 30px;
   padding-bottom: 30px;
   width: 1600px;
-  border: 2px solid green;
+
   font-size: 30px;
   color: white;
   text-align: center;
+  margin-top: 400px;
 }
 .MainContent {
 }
